# ispipeline

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-06-16-ispipeline-extraction.md
scripts/: is.metill.estate-health.plist
src/ispipeline/: __init__.py  check_pins.py  cli.py  confusables.py  estate_health.py  eu_terms.py  greynir.py  inflections.py  malfridur.py  malstadur.py  ministers.py  naturalness.py  nightly.py  parsing.py  pipeline.py  preprocessing.py  register.py
tests/: test_check_pins.py  test_confusables.py  test_estate_health.py  test_eu_terms.py  test_greynir.py  test_inflections.py  test_malfridur.py  test_ministers.py  test_naturalness.py  test_nightly.py  test_parsing.py  test_pipeline.py  test_preprocessing.py  test_register.py
